# ArguSentiment

./: .gitignore  README.md  pyproject.toml
ExpandNRC/: README.md  __init__.py  emotion_distance_calculator.py  emotion_frequences.py  example_use.ipynb  pyproject.toml  utils.py
ExpandNRC/examples/: example_usage.py
data/: dfIBM_stance-v1.json  dfMT-PC_SA.json  dfMT-PC_SA_CP.json  dfMT-PC_SA_CP_TopicID.json  dfMT-PC_SA_CP_TopicID_AduType.json  dfMT1_stance-v1.json  dfMT2-PC_SA_CP_TopicID_AduType.json  dfMT2_stance-v1.json  dfMTv2-PC-SA.json  dfPE_PC_SA_ST_Stance.json  dfPE_PC_SA_ST_Stance_topicID.json  df_IBM.json  df_IBM.pkl
exportToHTML/: NRC_expansion.ipynb.html
src/: ADU_extraction_IBM_Claims.ipynb  ADU_extraction_PE.ipynb  ADU_extracttion_MT.ipynb  ADU_extracttion_MT2.ipynb  Argu_Stance_Flow.ipynb  CMV_with_NRC.ipynb  CMV_with_TNLP.ipynb  MT_with_TNLP.ipynb  NRC_expansion.ipynb  NRC_expansion_study.ipynb  SentimentFlow_Argumentation.ipynb  Stance_Classfication.ipynb  compare_llm_with_nrc.ipynb  data_preprocess_stance.py  dfPE_PC_SA_ST.json  eval_stance.py  expandnrc_adapter.py  experiments.ipynb  nrc_v3.json  pyproject.toml  sentimentflow_nrc.ipynb  train_stance.py
src/plots/: MT1_Bert_E2_B4_N_eval.txt
src/results/: navier_stocker_text_results.json  processed_texts.csv
