[tool.poetry]
name = "sf"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sentimentflow = {git = "https://github.com/dpicca/SentimentFlow"}
en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1.tar.gz"}
matplotlib = "^3.9.2"
convokit = "^3.0.0"
pydantic = "2.7.4"
transformers = "^4.45.2"
torch = "^2.4.1"
ipywidgets = "^8.1.5"
umap-learn = "^0.5.6"
nrclex = {path = "/Users/Panos/Library/CloudStorage/Dropbox/PI_Squared/PycharmProjects/Research/NRCLex"}


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
