[tool.poetry]
name = "sf"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
sentimentflow = {git = "https://github.com/dpicca/SentimentFlow"}
matplotlib = "^3.9.2"
pydantic = "2.7.4"
transformers = "^4.48.3"
torch = "^2.4.1"
ipywidgets = "^8.1.5"
nrclex = {path = "NRCLex"}
tiktoken = "^0.8.0"
sentencepiece = "^0.2.0"
seaborn = "^0.13.2"
notebook = "^7.3.2"
jupyter = "^1.1.1"
zh-core-web-trf = {url = "https://github.com/explosion/spacy-models/releases/download/zh_core_web_trf-3.8.0/zh_core_web_trf-3.8.0.tar.gz"}
corpus = "^0.4.2"
convokit = "3"
spacy = "^3.8.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
